<resources>

    <string name="app_name">Word Waffle</string>
    <string name="play_button">Play</string>
    <string name="rules_button">Rules</string>
    <string name="high_score_label">Highscores</string>
    <string name="high_score_one">"0"</string>
    <string name="number_one">#1</string>
    <string name="high_score_two">"0"</string>
    <string name="number_two">#2</string>
    <string name="high_score_three">"0"</string>
    <string name="number_three">#3</string>
    <string name="high_score_four">"0"</string>
    <string name="number_four">#4</string>
    <string name="high_score_five">"0"</string>
    <string name="number_five">#5</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Word Waffle</string>

</resources>